--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ mod_version=1.0.0
 mod_group_id=dev.sleepy_evelyn.create_configured
 mod_authors=Sleepy Evelyn
 mod_description=Additional configuration options & improvements for Create & associated addons.
+mod_issues=https://github.com/sleepy-evelyn/Create-Configured/issues
 
 # Dependencies
 create_version = 6.0.2-27
